git update mapas de veterinaria con google static maps api

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -4,3 +4,4 @@ distributionUrl=https\://services.gradle.org/distributions/gradle-8.2-bin.zip
 distributionPath=wrapper/dists
 zipStorePath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
+MAPS_API_KEY=AIzaSyDlVNtwPdAAReAsmrVJygW1Wc9TRzVo7WM
