--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.DermaCan"
         tools:targetApi="31">
+
+
         <activity
             android:name=".sintomas"
             android:exported="false" />
@@ -34,7 +36,7 @@
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="" />
+            android:value="${MAPS_API_KEY}" />
 
         <activity
             android:name=".ubicacion"
